revert to original task name
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>

--- a/acceptance-tests/tests/build.gradle
+++ b/acceptance-tests/tests/build.gradle
@@ -123,7 +123,7 @@ task acceptanceTest(type: Test) {
   doFirst { mkdir "${buildDir}/jvmErrorLogs" }
 }
 
-task acceptanceTestCore(type: Test) {
+task acceptanceTestNotPrivacy(type: Test) {
   inputs.property "integration.date", LocalTime.now() // so it runs at every invocation
   exclude '**/privacy/**'
   exclude '**/permissioning/**'
