Use getDefaultSyncModeIfNotSet during bonsai-limit-trie-log-enabled validation
Private networks in certain configurations can yield sync-mode=null and were skipping the validation
Signed-off-by: Simon Dudley <simon.dudley@consensys.net>

--- a/ethereum/api/build.gradle
+++ b/ethereum/api/build.gradle
@@ -144,6 +144,7 @@ tasks.register('generateTestBlockchain') {
         "--logging=ERROR",
         "--data-path=$dataPath",
         "--genesis-file=$srcFiles/genesis.json",
+        "--bonsai-limit-trie-logs-enabled=false",
         "blocks",
         "import",
         "--format=JSON",
@@ -158,6 +159,7 @@ tasks.register('generateTestBlockchain') {
         "--logging=ERROR",
         "--data-path=$dataPath",
         "--genesis-file=$srcFiles/genesis.json",
+        "--bonsai-limit-trie-logs-enabled=false",
         "blocks",
         "export",
         "--format=RLP",
