--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.welcome=never
+#TODO: remove me
+org.gradle.dependency.verification=lenient
 
 # Optional - set custom build version
 # version=24.5.6-acme
