count hits and misses
Signed-off-by: Danno Ferrin <danno@numisight.com>

--- a/testfuzz/build.gradle
+++ b/testfuzz/build.gradle
@@ -62,8 +62,8 @@ tasks.register("fuzzAll", JavaExec) {
     "--corpus-dir=${buildDir}/generated/corpus",
     "--client=evm1=evmone-eofparse",
     "--client=revm=revme bytecode",
-    "--client=geth=eofdump eofparser",
-    "--client=etjs=tsx ../../../ethereumjs/ethereumjs-monorepo/packages/evm/scripts/eofContainerValidator.ts"
+    //    "--client=geth=eofdump eofparser",
+    //    "--client=etjs=tsx ../../../ethereumjs/ethereumjs-monorepo/packages/evm/scripts/eofContainerValidator.ts"
   ]
 }
 
