Fix fuzzing dependencies
The fuzzAll task depended on targets that didn't exist.

Signed-off-by: Danno Ferrin <danno@numisight.com>

--- a/testfuzz/build.gradle
+++ b/testfuzz/build.gradle
@@ -105,7 +105,7 @@ tasks.register("fuzzReth") {
 }
 
 tasks.register("fuzzAll") {
-  dependsOn fuzzEvm1, fuzzEthJS, fuzzGeth, fuzzNethermind, fuzzReth
+  dependsOn fuzzEvmone, fuzzEthereumJS, fuzzGeth, fuzzNethermind, fuzzReth
 }
 
 jacoco {
