--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ sonarqube {
   }
 }
 
+tasks.register('spotlessCheckFast') {
+  dependsOn subprojects.collect { it.tasks.withType(com.diffplug.gradle.spotless.SpotlessCheck) }
+}
+
 project.tasks["sonarqube"].dependsOn "jacocoRootReport"
 
 if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_21)) {
@@ -432,6 +436,12 @@ allprojects {
     options.addStringOption('Xwerror', '-html5')
     options.encoding = 'UTF-8'
   }
+
+  plugins.withType(JavaPlugin) {
+    tasks.withType(JavaCompile) {
+      it.dependsOn(rootProject.tasks.named('spotlessCheckFast'))
+    }
+  }
 }
 
 task deploy() {}
@@ -455,7 +465,7 @@ task checkMavenCoordinateCollisions {
 
 tasks.register('checkPluginAPIChanges', DefaultTask) {}
 checkPluginAPIChanges.dependsOn(':plugin-api:checkAPIChanges')
-check.dependsOn('checkPluginAPIChanges', 'checkMavenCoordinateCollisions')
+check.dependsOn('checkPluginAPIChanges', 'checkMavenCoordinateCollisions', 'spotlessCheckFast')
 
 subprojects {
 
