Use updated calculateImplementationVersion for Implementation-Version in jar manifests
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>

--- a/acceptance-tests/test-plugins/build.gradle
+++ b/acceptance-tests/test-plugins/build.gradle
@@ -25,7 +25,7 @@ task testPluginsJar(type: Jar) {
       'Specification-Title': archiveBaseName,
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
-      'Implementation-Version': calculateVersion()
+      'Implementation-Version': calculateImplementationVersion()
       )
   }
   from sourceSets.main.output
