--- a/build.gradle
+++ b/build.gradle
@@ -830,7 +830,7 @@ task distDocker {
         dockerPlatform = "--platform ${project.getProperty('docker-platform')}"
         println "Building for platform ${project.getProperty('docker-platform')}"
       }
-      def gitDetails = getGitCommitDetails()
+      def gitDetails = getGitCommitDetails(7)
       executable shell
       workingDir dockerBuildDir
       args "-c", "docker build ${dockerPlatform} --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${gitDetails.hash} -t ${image} ."
@@ -997,12 +997,34 @@ def buildTime() {
 @Memoized
 def calculateVersion() {
   // Regex pattern for basic calendar versioning, with provision to omit patch rev
+  def calVerPattern = ~/\d+\.\d+(\.\d+)?(-.*)?/
+
+  if (project.hasProperty('version') && (project.version =~ calVerPattern)) {
+    if (project.hasProperty('versionappendcommit') && project.versionappendcommit == "true") {
+      def gitDetails = getGitCommitDetails(7) // Adjust length as needed
+      return "${project.version}-${gitDetails.hash}"
+    }
+    return "${project.version}"
+  } else {
+    // If no version is supplied or it doesn't match the semantic versioning, calculate from git
+    println("Generating project version as supplied is version not semver: ${project.version}")
+    def gitDetails = getGitCommitDetails(7) // Adjust length as needed
+    return "${gitDetails.date}-develop-${gitDetails.hash}"
+  }
+}
+
+@Memoized
+def calculateImplementationVersion() {
+  // Regex pattern for basic calendar versioning, with provision to omit patch rev
   def calVerPattern = ~/\d+\.\d+(\.\d+)?(-\w+)?$/
-  def calVerWithCommitPattern = ~/\d+\.\d+(\.\d+)?(-\w+)?-[0-9a-fA-F]{7,8}$/
-  def gitDetails = getGitCommitDetails() // Adjust length as needed
+  def calVerWithCommitPattern = ~/\d+\.\d+(\.\d+)?(-\w+)?-[0-9a-fA-F]{8}$/
+  def calVerWith7CharCommitPattern = ~/\d+\.\d+(\.\d+)?(-\w+)?-[0-9a-fA-F]{8}$/
+  def gitDetails = getGitCommitDetails(8) // Adjust length as needed
   if (project.hasProperty('version') && project.version =~ calVerWithCommitPattern) {
-    println("Utilising supplied version as it appears to already contain commit hash: ${project.version}")
+    println("Utilising supplied version as it appears to already contain 8 char commit hash: ${project.version}")
     return project.version
+  } else if(project.version =~ calVerWith7CharCommitPattern) {
+    return project.version.toString().replaceAll("[0-9a-fA-F]{7}\$", gitDetails.hash)
   } else if (project.hasProperty('version') && project.version =~ calVerPattern) {
     println("Generating project version using supplied version: ${project.version}-${gitDetails.hash}")
     return "${project.version}-${gitDetails.hash}"
