--- a/testfuzz/build.gradle
+++ b/testfuzz/build.gradle
@@ -24,7 +24,7 @@ jar {
       'Specification-Title': archiveBaseName,
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
-      'Implementation-Version': calculateVersion()
+      'Implementation-Version': calculateImplementationVersion()
       )
   }
 }
