--- a/crypto/services/build.gradle
+++ b/crypto/services/build.gradle
@@ -22,7 +22,7 @@ jar {
       'Specification-Title': archiveBaseName,
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
-      'Implementation-Version': calculateVersion(),
+      'Implementation-Version': calculateImplementationVersion(),
       'Automatic-Module-Name': 'org.hyperledger.besu.internal.crypto'
       )
   }
