--- a/plugin-api/build.gradle
+++ b/plugin-api/build.gradle
@@ -21,7 +21,7 @@ jar {
       'Specification-Title': archiveBaseName,
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
-      'Implementation-Version': calculateVersion(),
+      'Implementation-Version': calculateImplementationVersion(),
       'Automatic-Module-Name': 'org.hyperledger.besu.plugin.api'
       )
   }
