--- a/crypto/algorithms/build.gradle
+++ b/crypto/algorithms/build.gradle
@@ -23,6 +23,7 @@ jar {
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
       'Implementation-Version': calculateVersion(),
+'Commit-Hash': getGitCommitDetails().hash,
       'Automatic-Module-Name': 'org.hyperledger.besu.internal.crypto'
       )
   }
