--- a/evm/build.gradle
+++ b/evm/build.gradle
@@ -25,6 +25,7 @@ jar {
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
       'Implementation-Version': calculateVersion(),
+'Commit-Hash': getGitCommitDetails().hash,
       'Automatic-Module-Name': 'org.hyperledger.besu.evm'
       )
   }
