--- a/ethereum/retesteth/build.gradle
+++ b/ethereum/retesteth/build.gradle
@@ -21,7 +21,7 @@ jar {
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
       'Implementation-Version': calculateVersion(),
-'Commit-Hash': getGitCommitDetails().hash
+'Commit-Hash': getGitCommitDetails(40).hash
       )
   }
 }
