--- a/evm/build.gradle
+++ b/evm/build.gradle
@@ -25,7 +25,7 @@ jar {
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
       'Implementation-Version': calculateVersion(),
-'Commit-Hash': getGitCommitDetails().hash,
+'Commit-Hash': getGitCommitDetails(40).hash,
       'Automatic-Module-Name': 'org.hyperledger.besu.evm'
       )
   }
