--- a/plugin-api/build.gradle
+++ b/plugin-api/build.gradle
@@ -22,6 +22,7 @@ jar {
       'Specification-Version': project.version,
       'Implementation-Title': archiveBaseName,
       'Implementation-Version': calculateVersion(),
+      'Commit-Hash': getGitCommitDetails(40).hash,
       'Automatic-Module-Name': 'org.hyperledger.besu.plugin.api'
       )
   }
