--- a/.github/workflows/pre-review.yml
+++ b/.github/workflows/pre-review.yml
@@ -141,6 +141,12 @@ jobs:
         with:
           name: unit-${{matrix.runner_index}}-test-results
           path: '**/test-results/**/TEST-*.xml'
+      - name: Upload Unit Test HTML Reports
+        uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
+        if: success() || failure()
+        with:
+          name: unit-${{matrix.runner_index}}-test-html-reports
+          path: '**/build/reports/tests/test/**'
   unittests-passed:
     name: "unittests-passed"
     runs-on: ubuntu-22.04
