--- a/config/build.gradle
+++ b/config/build.gradle
@@ -38,6 +38,9 @@ dependencies {
   implementation 'info.picocli:picocli'
   implementation 'io.tmio:tuweni-bytes'
   implementation 'io.tmio:tuweni-units'
+  implementation 'org.apache.tuweni:tuweni-bytes:2.3.1'
+  implementation 'org.apache.tuweni:tuweni-units:2.3.1'
+  implementation 'org.apache.tuweni:tuweni-rlp:2.3.1'
   implementation "org.immutables:value-annotations"
   annotationProcessor "org.immutables:value"
 
