--- a/build.gradle
+++ b/build.gradle
@@ -722,6 +722,7 @@ task evmToolStartScripts(type: CreateStartScripts) {
   doLast { tweakStartScript(evmToolStartScripts) }
 }
 
+
 task autocomplete(type: JavaExec) {
   dependsOn compileJava
   def tempAutocompleteFile = File.createTempFile("besu", ".autocomplete")
@@ -1097,6 +1098,8 @@ distributions {
       from("build/reports/license/license-dependency.html") { into "." }
       from("./docs/GettingStartedBinaries.md") { into "." }
       from("./docs/DocsArchive0.8.0.html") { into "." }
+      from("./docs/DocsArchive0.8.0.html") { into "." }
+      from("./besu/src/main/scripts/besu-entry.sh") { into "./bin/" }
       from(autocomplete) { into "." }
     }
   }
