fixup! Move SuffixTrieEncoder to besu-verkle-trie project
 use 0.0.3-SNAPSHOT with timestamp

Signed-off-by: Luis Pinto <luis.pinto@consensys.net>

--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -169,7 +169,7 @@ dependencyManagement {
       entry 'ipa-multipoint'
     }
 
-    dependency 'org.hyperledger.besu:besu-verkle-trie:0.0.2'
+    dependency 'org.hyperledger.besu:besu-verkle-trie:0.0.3-20240917.164246-1'
 
     dependencySet(group: 'org.immutables', version: '2.10.0') {
       entry 'value-annotations'
